Tue Nov  9 13:34:50 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: disable LANMAN authentication (too unsecure)

Thu Nov  4 20:38:16 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac: allow to specify library options with --enable-krb5

Fri Oct 29 16:52:15 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	- src/odbc/unittests/peter.c
	- Sybase does not need to prepare again changing parameters

Fri Oct 29 10:49:12 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/types.txt src/odbc/unittests/genparams.c src/tds/data.c:
	* src/tds/types.pl:
	- fix SYB5INT8 type

Tue Oct 26 10:12:21 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac misc/prepare_win32.sh src/ctlib/unittests/cancel.c:
	* src/dblib/unittests/null.c src/dblib/unittests/null2.c:
	- some fixes for win64 and MingW

Fri Oct 22 22:14:48 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/config.h: add missing define for msvc6

Wed Oct 13 13:47:03 EDT 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile 
	- remove FROM_TARBALL, test for CVS instead, and check if 
	- compiler is in the PATH

Tue Oct 12 11:29:23 EDT 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile src/replacements/Makefile.am
	- works with tarball if FROM_TARBALL defined 

Tue Oct 12 13:48:14 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: change OpenSSL ciphers

Mon Oct 11 14:57:13 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix for OpenSSL

Wed Oct  6 10:02:53 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: fix typo

Tue Oct  5 10:36:23 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/ctlib.h src/ctlib/cs.c src/ctlib/ct.c:
	* src/ctlib/unittests/t0006.c:
	- fix CS_VARCHAR_TYPE/CS_VARBINARY_TYPE on ctlib
